apps/kivo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kivo
  labels:
    app: kivo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kivo
  template:
    metadata:
      labels:
        app: kivo
    spec:
      containers:
        - name: kivo
          image: 192.168.68.54:31834/kivo:placeholder
          ports:
            - containerPort: 3000
