apps/kivo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kivo
  labels:
    app: kivo
spec:
  selector:
    app: kivo
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
