apps/kivo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kivo-ingress
  labels:
    app: kivo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kivo.imapps.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kivo
                port:
                  number: 3000
